// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0x00 noop (): () -> () 1`] = `
Array [
  Object {
    "argTypes": Array [],
    "mnemonic": "noop",
    "opcode": 0,
    "opcodeHex": "0x00",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
]
`;

exports[`0x10 iadd (): (int32, int32) -> (int32) 1`] = `
Array [
  Object {
    "argTypes": Array [],
    "mnemonic": "iadd",
    "opcode": 16,
    "opcodeHex": "0x10",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "int32",
    ],
  },
]
`;

exports[`0x20 jmp (label): () -> () 1`] = `
Array [
  Object {
    "argTypes": Array [
      "label",
    ],
    "mnemonic": "jmp",
    "opcode": 32,
    "opcodeHex": "0x20",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
]
`;

exports[`read all instructions 1`] = `
Array [
  Object {
    "argTypes": Array [],
    "mnemonic": "nop",
    "opcode": 0,
    "opcodeHex": "0x00",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "int32",
    ],
    "mnemonic": "const_i32",
    "opcode": 1,
    "opcodeHex": "0x01",
    "operandTypes": Array [],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "add_i32",
    "opcode": 16,
    "opcodeHex": "0x10",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "sub_i32",
    "opcode": 17,
    "opcodeHex": "0x11",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "mul_i32",
    "opcode": 18,
    "opcodeHex": "0x12",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "div_i32",
    "opcode": 19,
    "opcodeHex": "0x13",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "mod_i32",
    "opcode": 20,
    "opcodeHex": "0x14",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "eq_i32",
    "opcode": 48,
    "opcodeHex": "0x30",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "ne_i32",
    "opcode": 49,
    "opcodeHex": "0x31",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "lt_i32",
    "opcode": 50,
    "opcodeHex": "0x32",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "gt_i32",
    "opcode": 51,
    "opcodeHex": "0x33",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "lte_i32",
    "opcode": 52,
    "opcodeHex": "0x34",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "gte_i32",
    "opcode": 53,
    "opcodeHex": "0x35",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "halt",
    "opcode": 80,
    "opcodeHex": "0x50",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "label",
    ],
    "mnemonic": "call",
    "opcode": 81,
    "opcodeHex": "0x51",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "label",
    ],
    "mnemonic": "jmp",
    "opcode": 82,
    "opcodeHex": "0x52",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "label",
    ],
    "mnemonic": "jmp_f",
    "opcode": 84,
    "opcodeHex": "0x54",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "label",
    ],
    "mnemonic": "jne_i32",
    "opcode": 85,
    "opcodeHex": "0x55",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "int32",
    ],
    "mnemonic": "store_g_i32",
    "opcode": 96,
    "opcodeHex": "0x60",
    "operandTypes": Array [
      "int32",
    ],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "int32",
    ],
    "mnemonic": "load_g_i32",
    "opcode": 97,
    "opcodeHex": "0x61",
    "operandTypes": Array [],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "print_i32",
    "opcode": 112,
    "opcodeHex": "0x70",
    "operandTypes": Array [
      "int32",
    ],
    "resultTypes": Array [],
  },
]
`;
